# ndt

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  PHASE2_CODE_EXAMPLES.md  PHASE2_DOCUMENTATION_INDEX.md  PHASE2_EXECUTIVE_SUMMARY.md  PHASE2_FILE_INVENTORY.md  PHASE2_INFRASTRUCTURE.md  README.md  REPOSITORY_OVERVIEW.md  SECURITY.md  SYNC_SUMMARY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  docs.yml  publish.yml  scorecard.yml  tests.yml
CONTRIBUTING/: index.html
INSTALL/: index.html
api/: index.html
api/SUMMARY/: index.html
api/ndt/: index.html
api_reference/: index.html
architecture_support/: index.html
concepts/how-it-works/: index.html
docs/: INSTALL.md  api_reference.md  architecture_support.md  examples_gallery.md  index.md  performance_benchmarks.md  quickstart.md  tds_reproduction.md  troubleshooting.md
docs/api/: index.md
docs/concepts/: how-it-works.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: architecture_support.md  examples_gallery.md  tds_reproduction.md
docs/reference/: performance_benchmarks.md  troubleshooting.md
examples/: 01_quickstart_mnist.py  02_cnn_cifar10.py  03_reproduce_tds_experiment.py  README.md  __init__.py
examples_gallery/: index.html
experiments/: CLAUDE.md  tap_experiments_main.py  transitionphase_adam.py  validation_data.pkl
experiments/mechanistic_interpretability/: CHECKPOINT_INTEGRATION_GUIDE.md  CLAUDE.md  COLAB_INSTRUCTIONS.md  CONTINUATION_INSTRUCTIONS.md  Checkpoint_Experiments_Colab.ipynb  Continue_Training_to_Step2000.ipynb  EXECUTION_READINESS.md  FRAMEWORK_VERIFICATION.md  HONEST_ASSESSMENT.md  README.md  (+21 more)
performance_benchmarks/: index.html
quickstart/: index.html
search/: search_index.json
tds_reproduction/: index.html
tests/: conftest.py  test_estimators.py  test_examples.py  test_jump_detection.py  test_tracker.py  test_validity.py
troubleshooting/: index.html
(+299 files in other folders)
